# anchor-heap-experiments

./: Dockerfile  README.md  docker.sh  justfile
with-account/: Anchor.toml
with-account/programs/with-account/: Cargo.toml
with-account/programs/with-account/src/: lib.rs
with-account/programs/with-account/tests/: tests.rs
with-account/tests/: with-account.ts
without-account/: Anchor.toml
without-account/programs/without-account/: Cargo.toml
without-account/programs/without-account/src/: lib.rs
without-account/programs/without-account/tests/: tests.rs
without-account/tests/: without-account.ts
