[package]
name = "with-account"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "with_account"

[features]
default = ["custom-heap"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []

[dependencies]
anchor-lang = "0.30.0"
bytemuck = { version = "1.15.0", features = ["min_const_generics"] }
light-macros = "0.3.1"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = "1.37"
