[package]
name = "without-account"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "without_account"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
light-macros = "0.3.1"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = "1.37"
